--- a/AeroCom/src/main/resources/application.properties
+++ b/AeroCom/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=1030
 spring.application.name=AeroCom
+
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/aerocomdb
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.password=pTMawUVxAntkSqwlNKJTpquJSssMPUFF
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Optional: Hibernate settings for JPA
