--- a/AeroCom/src/main/resources/application.properties
+++ b/AeroCom/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+# Application Settings
 server.port=1030
 spring.application.name=AeroCom
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${{RAILWAY_PRIVATE_DOMAIN}}:3306/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pTMawUVxAntkSqwlNKJTpquJSssMPUFF
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,10 +11,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Optional: Hibernate settings for JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Thymeleaf settings
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+# Session timeout
 server.servlet.session.timeout=50m
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
