--- a/AeroCom/src/main/resources/application.properties
+++ b/AeroCom/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=1030
 spring.application.name=AeroCom
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://${{RAILWAY_PRIVATE_DOMAIN}}:3306/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=pTMawUVxAntkSqwlNKJTpquJSssMPUFF
+spring.datasource.url=jdbc:mysql://${RAILWAY_PRIVATE_DOMAIN}:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Optional: Hibernate settings for JPA
